--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
 		<title>Teaching NLP for Digital Humanities (Teach4DH)</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/teach4dh.css">
 	</head>
 	<body>
 		<nav>
