--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Teach4DH</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300%7CRoboto:300%7CSlabo+27px" rel="stylesheet">
-    <link rel="stylesheet" href="teach4dh.css" type="text/css"/>
+    <link rel="stylesheet" href="/css/teach4dh.css" type="text/css"/>
 </head>
   
 <body>
