--- a/submission.html
+++ b/submission.html
@@ -1,1 +1,68 @@
-Details will be made available in due time.
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title>Teach4DH</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300%7CRoboto:300%7CSlabo+27px" rel="stylesheet">
+    <link rel="stylesheet" href="/css/teach4dh.css" type="text/css"/>
+</head>
+  
+<body>
+
+<div id="header">
+  <table>
+    <tr valign="bottom">
+      <td><img src=""/></td>
+      <td>
+	<p class="title">Teaching NLP for Digital Humanities (Teach4DH)</p>
+	<p class="body">September 12th, 2017, Berlin, Germany</p>
+      </td>
+    </tr>
+  </table>
+</div>
+
+<div id="subheader">
+  <ul id="navigation">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="cfp.html">Call for Papers</a></li>
+    <li class="active"><a href="submission.html">Submission</a></li>
+    <li><a href="program.html">Program</a></li>
+    <li><a href="committee.html">Committees</a></li>
+  </ul>
+</div>
+
+<table>
+
+  <tr valign="top">
+
+    <td>
+
+      <div id="contents">
+
+	<h1>Submission</h1>
+      
+	<p>Details will be made available in due time. </p>
+
+      </div>
+
+    
+  
+    </td>
+  </tr>
+</table>
+
+
+<div id="footer">
+  <div class="clearfix">
+    <p>
+      Teaching NLP for Digital Humanities (Teach4DH)
+      &emsp;&emsp;&emsp;&emsp;
+      Contact: <a href="mailto:heike.zinsmeister@uni-hamburg.de">heike.zinsmeister@uni-hamburg.de</a><br>
+
+  </div>
+</div>
+
+</body>
+
+</html>
