--- a/program.html
+++ b/program.html
@@ -28,7 +28,7 @@
     <li><a href="cfp.html">Call for Papers</a></li>
     <li><a href="submission.html">Submission</a></li>
     <li class="active"><a href="program.html">Program</a></li>
-    <li><a href="committee.html">Committees</a></li>
+    <li><a href="committees.html">Committees</a></li>
   </ul>
 </div>
 
