--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	  <table cellspacing=0 cellpadding=3>
 	    <tr valign="top">
 	      <td>Apr&nbsp;21st,&nbsp;2017</td>
-	      <td>1st workshop Call for Papers</td>
+	      <td>1st call for papers</td>
 	    </tr>
 	    <tr valign="top">
 	      <td>Jul&nbsp;17th,&nbsp;2017</td>
@@ -81,7 +81,7 @@
 	    </tr>
 		  <tr valign="top">
 	      <td>Sep&nbsp;13st-15th,&nbsp;2017</td>
-	      <td>GSCL 2017 main conference</td>
+	      <td>GSCL main conference</td>
 	    </tr>
 	  </table>
 	</p>
