--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       
 	<p>Computational linguists often teach digital humanities (DH) modules that focus on using / applying / adapting NLP technologies and resources to DH problems. The challenge in such modules is to introduce students with a background in humanities or social sciences to technical content without going into detail. NLP tools often require special input formats, knowledge of program options, and post-processing of the output. NLP resources are often not easily accessible and provide only limited interaction. Interfaces and search tools require knowledge of specialized search syntax.</p>
 
-	<p>TThe workshop is intended to provide a forum for such “NLP teachers” to share experiences, discuss best practices, introduce teaching concepts, and present demos of existing technology. It also provides an opportunity for DH researchers to express their needs and provide directions for future DH curricular developments. The workshop is intended to foster collaborations and to cross-fertilize knowledge and approaches across DH disciplines. </p>
+	<p>The workshop is intended to provide a forum for such “NLP teachers” to share experiences, discuss best practices, introduce teaching concepts, and present demos of existing technology. It also provides an opportunity for DH researchers to express their needs and provide directions for future DH curricular developments. The workshop is intended to foster collaborations and to cross-fertilize knowledge and approaches across DH disciplines. </p>
 
 	<p>Teach4DH is co-located with
-	  the <xb><a href="http://gscl2017.dfki.de/">GSCL 2017</a></b>.</p>
+	  <xb><a href="http://gscl2017.dfki.de/">GSCL 2017</a></b>.</p>
 
       </div>
 
