--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	      <td>Workshop day</td>
 	    </tr>
 		  <tr valign="top">
-	      <td>Sep&nbsp;13st-15th,&nbsp;2017</td>
+	      <td>Sep&nbsp;13th-15th,&nbsp;2017</td>
 	      <td>GSCL main conference</td>
 	    </tr>
 	  </table>
