--- a/committees.html
+++ b/committees.html
@@ -43,14 +43,13 @@
 	<h1>Committees</h1>
      
    <h2> Workshop Chairs </h2>
-	<p>
+<p>
 
 <table class="committee">
 <tr>
   <td class="p_name">Peggy Bockwinkel </td>
   <td class="p_affiliation">University of Stuttgart</td>
 </tr>
-
 <tr>
   <td class="p_name">Thierry Declerck</td>
   <td class="p_affiliation">DFKI, Saarbrücken</td>
@@ -64,12 +63,44 @@
   <td class="p_affiliation">Universität Hamburg</td>
 </tr>
 </table>
-
+	      
 </p>
 
   
   <h2> Program Committee </h2>
-<p> ...
+<p> 
+	
+<table class="committee">
+	
+	    <tr>
+  <td class="p_name">Melanie Andresen</td>
+  <td class="p_affiliation">Universität Hamburg</td>
+</tr>
+	<tr>
+  <td class="p_name">Stefanie Dipper</td>
+  <td class="p_affiliation">Ruhr-Universität Bochum</td>
+</tr>
+	<tr>
+  <td class="p_name">Lothar Lemnitzer</td>
+  <td class="p_affiliation">BBAW, Berlin</td>
+</tr>
+<tr>
+  <td class="p_name">Nils Reiter </td>
+  <td class="p_affiliation">University of Stuttgart</td>
+</tr>
+	<tr>
+  <td class="p_name">Olga Scrivner</td>
+  <td class="p_affiliation">Indiana University</td>
+</tr>
+	<tr>
+  <td class="p_name">Andreas Witt</td>
+  <td class="p_affiliation">University of Cologne</td>
+</tr>
+<tr>
+  <td class="p_name">...</td>
+  <td class="p_affiliation"></td>
+</tr>
+</table>
 </p>
       </div>
   
@@ -83,7 +114,7 @@
     <p>
       Teaching NLP for Digital Humanities (Teach4DH)
       &emsp;&emsp;&emsp;&emsp;
-      Contact: <a href="mailto:heike.zinsmeister@uni-hamburg.de">heike.zinsmeister@uni-hamburg.de</a><br>
+      Contact: <a href="mailto:teach4dh@googlegroups.com">teach4dh@googlegroups.com</a><br>
 
   </div>
 </div>
