--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
     <p>
       Teaching NLP for Digital Humanities (Teach4DH)
       &emsp;&emsp;&emsp;&emsp;
-      Contact: <a href="mailto:heike.zinsmeister@uni-hamburg.de">heike.zinsmeister@uni-hamburg.de</a><br>
-
+       Contact: <a href="mailto:teach4dh@googlegroups.com">teach4dh@googlegroups.com</a><br>
   </div>
 </div>
 
