--- a/committees.html
+++ b/committees.html
@@ -76,9 +76,17 @@
   <td class="p_name">Melanie Andresen</td>
   <td class="p_affiliation">Universität Hamburg</td>
 </tr>
+	 <tr>
+  <td class="p_name">Fabian Barteld</td>
+  <td class="p_affiliation">Universität Hamburg</td>
+</tr>
 	<tr>
   <td class="p_name">Stefanie Dipper</td>
   <td class="p_affiliation">Ruhr-Universität Bochum</td>
+</tr>
+	<tr>
+  <td class="p_name">Jonas Kuhn</td>
+  <td class="p_affiliation">University of Stuttgart</td>
 </tr>
 	<tr>
   <td class="p_name">Lothar Lemnitzer</td>
@@ -91,6 +99,10 @@
 	<tr>
   <td class="p_name">Olga Scrivner</td>
   <td class="p_affiliation">Indiana University</td>
+</tr>
+	<tr>
+  <td class="p_name">Thorsten Trippel</td>
+  <td class="p_affiliation">University of Tübingen</td>
 </tr>
 	<tr>
   <td class="p_name">Andreas Witt</td>
