--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="header">
   <table>
     <tr valign="bottom">
-      <td><img src=""/></td>
+      <td><img src="teach4dh_logo.svg"/></td>
       <td>
 	<p class="title">Teaching NLP for Digital Humanities (Teach4DH)</p>
 	<p class="body">September 12th, 2017, Berlin, Germany</p>
