--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Teach4DH</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300%7CRoboto:300%7CSlabo+27px" rel="stylesheet">
     <link rel="stylesheet" href="/css/teach4dh.css" type="text/css"/>
-</head>
+</head> 
   
 <body>
 
@@ -15,7 +15,7 @@
     <tr valign="bottom">
       <td><img src="teach4dh_logo.svg"/></td>
       <td>
-	<p class="title">Teaching NLP for Digital Humanities (Teach4DH)</p>
+	<p class="title">Teach4DH: Teaching NLP for Digital Humanities</p>
 	<p class="body">September 12th, 2017, Berlin, Germany</p>
       </td>
     </tr>
