--- a/committees.html
+++ b/committees.html
@@ -85,6 +85,10 @@
   <td class="p_affiliation">Ruhr-Universität Bochum</td>
 </tr>
 	<tr>
+  <td class="p_name">Kim Gerdes</td>
+  <td class="p_affiliation">Sorbonne nouvelle Paris</td>
+</tr>
+	<tr>
   <td class="p_name">Jonas Kuhn</td>
   <td class="p_affiliation">University of Stuttgart</td>
 </tr>
