--- a/committees.html
+++ b/committees.html
@@ -89,6 +89,10 @@
   <td class="p_affiliation">Sorbonne nouvelle Paris</td>
 </tr>
 	<tr>
+  <td class="p_name">Evelyn Gius</td>
+  <td class="p_affiliation">Universität Hamburg</td>
+</tr>
+	<tr>
   <td class="p_name">Jonas Kuhn</td>
   <td class="p_affiliation">University of Stuttgart</td>
 </tr>
