--- a/program.html
+++ b/program.html
@@ -13,7 +13,7 @@
 <div id="header">
   <table>
     <tr valign="bottom">
-      <td><img src="teach4dh_logo_small.svg"/></td>
+      <td><img src="teach4dh_logo_tiny.png"/></td>
       <td>
 	<p class="title">Teaching NLP for Digital Humanities</p>
 	<p class="body">September 12th, 2017, Berlin, Germany</p>
