--- a/program.html
+++ b/program.html
@@ -12,9 +12,9 @@
 
 <div id="header">
   <table>
-    <tr valign="bottom">
+    <tr >
       <td valign="middle"><img src="teach4dh_logo_tiny.png"/></td>
-      <td>
+      <td valign="bottom">
 	<p class="title">Teaching NLP for Digital Humanities</p>
 	<p class="body">September 12th, 2017, Berlin, Germany</p>
       </td>
