--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <div id="header">
   <table>
-    <tr valign="bottom">
-      <td><img src=""/></td>
-      <td>
-	<p class="title">Teach4DH: Teaching NLP for Digital Humanities</p>
+<tr>
+    <td valign="middle"><img src="teach4dh_logo_tiny.png"/></td>
+      <td valign="bottom">
+	<p class="title">Teaching NLP for Digital Humanities</p>
 	<p class="body">September 12th, 2017, Berlin, Germany</p>
       </td>
-    </tr>
+</tr>
   </table>
 </div>
 
@@ -40,7 +40,7 @@
 
       <div id="contents">
 
-	<h1>Workshop Description</h1>
+	<h1>Teach4DH Workshop Description</h1>
       
 	<p>Computational linguists often teach digital humanities (DH) modules that focus on using / applying / adapting NLP technologies and resources to DH problems. The challenge in such modules is to introduce students with a background in humanities or social sciences to technical content without going into detail. NLP tools often require special input formats, knowledge of program options, and post-processing of the output. NLP resources are often not easily accessible and provide only limited interaction. Interfaces and search tools require knowledge of specialized search syntax.</p>
 
