--- a/submission.html
+++ b/submission.html
@@ -12,10 +12,10 @@
 
 <div id="header">
   <table>
-    <tr valign="bottom">
-      <td><img src=""/></td>
-      <td>
-	<p class="title">Teaching NLP for Digital Humanities (Teach4DH)</p>
+    <tr>
+     <td valign="middle"><img src="teach4dh_logo_tiny.png"/></td>
+     <td valign="bottom">
+	<p class="title">Teaching NLP for Digital Humanities</p>
 	<p class="body">September 12th, 2017, Berlin, Germany</p>
       </td>
     </tr>
