--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<p>
 	  <table cellspacing=0 cellpadding=3>
 	    <tr valign="top">
-	      <td>Apr&nbsp;21st,&nbsp;2017</td>
+	      <td>Apr&nbsp;24th,&nbsp;2017</td>
 	      <td>1st call for papers</td>
 	    </tr>
 	    <tr valign="top">
