--- a/committees.html
+++ b/committees.html
@@ -116,6 +116,10 @@
   <td class="p_name">Andreas Witt</td>
   <td class="p_affiliation">University of Cologne</td>
 </tr>
+	<tr>
+  <td class="p_name">Amir Zeldes</td>
+  <td class="p_affiliation">Georgetown University</td>
+</tr>
 <tr>
   <td class="p_name">...</td>
   <td class="p_affiliation"></td>
