--- a/cfp.html
+++ b/cfp.html
@@ -42,12 +42,37 @@
 
 	<h1>Call for Papers</h1>
       
-	<p>Coming soon. </p>
+	<p>
+	Computational linguists often teach digital humanities (DH) modules that focus on using / applying / adapting Natural Language Processing (NLP) technologies and resources to DH problems. The challenge in such modules is to introduce students with a background in humanities or social sciences to technical content without going into detail. NLP tools often require special input formats, knowledge of program options, and post-processing of the output. NLP resources are often not easily accessible and provide only limited interaction. Interfaces and search tools require knowledge of specialized search syntax.
+	</p>
+	<p>
+	The workshop is intended to provide a forum for such "NLP teachers" to share experiences, discuss best practices, introduce teaching concepts, and present demos of existing technology. It also provides an opportunity for DH researchers to express  their needs and provide directions for future DH curricular developments. The workshop is intended to foster collaborations and to cross-fertilize knowledge and approaches across DH disciplines.
+	</p>
+
+	<p>
+	We welcome submissions of long and short papers, posters, and demonstrations relating to any aspect of teaching NLP in DH classes, including:
+	  <ul>
+		<li>Didactic units / concepts / tools for employing NLP in teaching "on stage"</li>
+		    <ul>
+		 	<li> Dealing, e.g., with data handling (encoding, transcription, mark-up), regular expressions, string manipulations, meta-data, annotations</li>
+			<li>Introducing NLP tools such as tools for search, text mining, annotation, machine learning, visualization</li>
+	 	    </ul>
+	      <li>Challenges in teaching for a non-CL audience</li>
+	           <ul>
+		      <li>Dealing with different levels of students' computational background</li>
+		      <li>From a technical perspective</li>
+	           </ul>
+	      <li>Exploiting NLP tools "behind the scenes" for creating didactic DH material</li>
+	      <li>Curricular considerations in developing standards for DH programs</li>
+	          <ul>
+		      <li>Relevant NLP resources and NLP methods</li>
+		      <li>NLP recommendations for a general DH certificate</li>
+	           </ul>
+	      </ul>	    
+</p>
 
       </div>
-
-    
-  
+ 
     </td>
   </tr>
 </table>
