--- a/cfp.html
+++ b/cfp.html
@@ -40,7 +40,7 @@
 
       <div id="contents">
 
-	<h1>Call for Papers</h1>
+	<h1>Teach4DH Call for Papers</h1>
       
 	<p>
 	Computational linguists often teach digital humanities (DH) modules that focus on using / applying / adapting Natural Language Processing (NLP) technologies and resources to DH problems. The challenge in such modules is to introduce students with a background in humanities or social sciences to technical content without going into detail. NLP tools often require special input formats, knowledge of program options, and post-processing of the output. NLP resources are often not easily accessible and provide only limited interaction. Interfaces and search tools require knowledge of specialized search syntax.
