--- a/submission.html
+++ b/submission.html
@@ -40,7 +40,7 @@
 
       <div id="contents">
 
-	<h1>Teach4DH submission</h1>
+	<h1>Teach4DH Submission</h1>
       
 	<p>
 	Submissions should report original and unpublished research, overviews of existing approaches, or empirically supported position statements on topics of interest to the workshop. Accepted papers are expected to be presented at the workshop and will be published in the workshop proceedings. They should emphasize completed results rather than work in progress and should indicate clearly the state of completion of the reported results. 
