--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="header">
   <table>
 <tr>
-    <td valign="middle"><img src="teach4dh_logo_new.png"/></td>
+    <td valign="middle"><img src="teach4dh_logo_new_tiny.png"/></td>
       <td valign="bottom">
 	<p class="title">Teaching NLP for Digital Humanities</p>
 	<p class="body">September 12th, 2017, Berlin, Germany</p>
