--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 	<p>The workshop is intended to provide a forum for such “NLP teachers” to share experiences, discuss best practices, introduce teaching concepts, and present demos of existing technology. It also provides an opportunity for DH researchers to express their needs and provide directions for future DH curricular developments. The workshop is intended to foster collaborations and to cross-fertilize knowledge and approaches across DH disciplines. </p>
 
-	<p>Teach4DH is co-located with
-	  <xb><a href="http://gscl2017.dfki.de/">GSCL 2017</a></b>.</p>
+	<p>Teach4DH is co-organized by GSCL's <a href="http://gscl.org/ak-ausbildung.html">SIG Education and Profession</a> and is co-located with
+	  <xb><a href="http://gscl2017.dfki.de/">GSCL 2017</a></xb>.</p>
 
       </div>
 
