--- a/committees.html
+++ b/committees.html
@@ -100,9 +100,17 @@
   <td class="p_name">Lothar Lemnitzer</td>
   <td class="p_affiliation">BBAW, Berlin</td>
 </tr>
+	<tr>
+  <td class="p_name">Harald Lüngen</td>
+  <td class="p_affiliation">IDS, Mannheim</td>
+</tr>
 <tr>
   <td class="p_name">Nils Reiter </td>
   <td class="p_affiliation">University of Stuttgart</td>
+</tr>
+		<tr>
+  <td class="p_name">Thomas Schmidt</td>
+  <td class="p_affiliation">IDS, Mannheim</td>
 </tr>
 	<tr>
   <td class="p_name">Olga Scrivner</td>
