--- a/committees.html
+++ b/committees.html
@@ -121,6 +121,10 @@
   <td class="p_affiliation">University of Tübingen</td>
 </tr>
 	<tr>
+  <td class="p_name">Gabriel Viehhauser</td>
+  <td class="p_affiliation">University of Stuttgart</td>
+</tr>
+	<tr>
   <td class="p_name">Andreas Witt</td>
   <td class="p_affiliation">University of Cologne</td>
 </tr>
