--- a/committees.html
+++ b/committees.html
@@ -113,8 +113,20 @@
   <td class="p_affiliation">IDS, Mannheim</td>
 </tr>
 	<tr>
+  <td class="p_name">Julian Schulz</td>
+  <td class="p_affiliation">LMU, München</td>
+</tr>
+	<tr>
   <td class="p_name">Olga Scrivner</td>
   <td class="p_affiliation">Indiana University</td>
+</tr>
+	<tr>
+  <td class="p_name">Caroline Sporleder</td>
+  <td class="p_affiliation">Georg-August-Universität Göttingen</td>
+</tr>
+	<tr>
+  <td class="p_name">Jannik Strötgen</td>
+  <td class="p_affiliation">MPI, Saarbrücken</td>
 </tr>
 	<tr>
   <td class="p_name">Thorsten Trippel</td>
