--- a/committees.html
+++ b/committees.html
@@ -97,6 +97,10 @@
   <td class="p_affiliation">Universität Hamburg</td>
 </tr>
 	<tr>
+  <td class="p_name">Fotis Jannidis</td>
+  <td class="p_affiliation">Julius-Maximilians-Universität Würzburg</td>
+</tr>
+	<tr>
   <td class="p_name">Jonas Kuhn</td>
   <td class="p_affiliation">University of Stuttgart</td>
 </tr>
@@ -115,6 +119,10 @@
 		<tr>
   <td class="p_name">Thomas Schmidt</td>
   <td class="p_affiliation">IDS, Mannheim</td>
+</tr>
+	<tr>
+  <td class="p_name">Ulrike Schneider</td>
+  <td class="p_affiliation">Johannes-Gutenberg-Universität Mainz</td>
 </tr>
 	<tr>
   <td class="p_name">Julian Schulz</td>
