--- a/cfp.html
+++ b/cfp.html
@@ -66,13 +66,13 @@
 	    <p>
 	Submissions should report original and unpublished research, overviews of existing approaches, or empirically supported position statements on topics of interest to the workshop. Accepted papers are expected to be presented at the workshop and will be published in the workshop proceedings. They should emphasize completed results rather than work in progress and should indicate clearly the state of completion of the reported results. 
 	      </p>
-	<p>
+	<!--Moved to Submission page: <p>
 		Long papers may consist of up to eight (8) pages of content, plus unlimited references. Short papers may consist of up to four (4) pages of content, plus unlimited references.
 	      </p>
 	      <p>
 		      Reviewing of papers will be double-blind. Therefore, the paper must not include authors’ names and affiliations or self-references that reveal the authors’ identity -- e.g., "We previously showed (Smith, 1991) ..." should be replaced by citations such as "Smith (1991) previously showed ...". Papers that do not conform to these requirements will be rejected without review.
 Authors of papers that have been or will be submitted to other meetings or publications must provide this information to the workshop co-chairs (<a href="mailto:teach4dh@googlegroups.com">teach4dh@googlegroups.com</a>). Authors of accepted papers must notify the program chairs within 10 days of acceptance if the paper is withdrawn for any reason.
-	      </p>
+	      </p>-->
 
       </div>
  
