--- a/submission.html
+++ b/submission.html
@@ -53,13 +53,13 @@
 			<li> Short papers may consist of up to four (4) pages of content, plus unlimited references.</li>
 	      </ul>
 	      
-	      <p>Authors of papers that have been or will be submitted to other meetings or publications must provide this information to the workshop 
+	      Authors of papers that have been or will be submitted to other meetings or publications must provide this information to the workshop 
 co-chairs (teach4dh@googlegroups.com). Authors of accepted papers must notify the program chairs within 10 days of acceptance if the paper
 is withdrawn for any reason.
 	      </p>
 
 	        <h2>Format</h2>
-Reviewing of papers will be double-blind. Therefore, the paper must not include authors’ names and affiliations or self-references 
+<p>Reviewing of papers will be double-blind. Therefore, the paper must not include authors’ names and affiliations or self-references 
 that reveal the authors’ identity -- e.g., "We previously showed (Smith, 1991) ..." should be replaced by citations 
 such as "Smith (1991) previously showed ...". Papers that do not conform to these requirements will be rejected without review.
 	      </p>	    
