--- a/submission.html
+++ b/submission.html
@@ -47,13 +47,13 @@
 	      <p>Submission is electronic, using the <a href="https://easychair.org/conferences/?conf=teach4dh">EasyChair conference management system</a>.
 
 	      <h2>Submission and Reviewing</h2>
-	     <p>We invite long and short papers:
+	      <p>We invite long and short papers:</p>
 		<ul>
 			<li> Long papers may consist of up to eight (8) pages of content, plus unlimited references.</li> 
 			<li> Short papers may consist of up to four (4) pages of content, plus unlimited references.</li>
 	      </ul>
 	      
-	      Authors of papers that have been or will be submitted to other meetings or publications must provide this information to the workshop 
+	      <p>Authors of papers that have been or will be submitted to other meetings or publications must provide this information to the workshop 
 co-chairs (teach4dh@googlegroups.com). Authors of accepted papers must notify the program chairs within 10 days of acceptance if the paper
 is withdrawn for any reason.
 	      </p>
