--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 	<p>The workshop is intended to provide a forum for such “NLP teachers” to share experiences, discuss best practices, introduce teaching concepts, and present demos of existing technology. It also provides an opportunity for DH researchers to express their needs and provide directions for future DH curricular developments. The workshop is intended to foster collaborations and to cross-fertilize knowledge and approaches across DH disciplines. </p>
 
-	<p>Teach4DH is co-organized by GSCL's <a href="http://gscl.org/ak-ausbildung-en.html">SIG Education and Profession</a> and is co-located with
+	<p>Teach4DH is co-organized by GSCL's <a href="http://gscl.org/ak-ausbildung-en.html">SIG Education and Profession</a> and supported by <a href="https://www.clarin.eu/">CLARIN</a>. The workshop is co-located with
 	  <xb><a href="http://gscl2017.dfki.de/">GSCL 2017</a></xb>.</p>
 
       </div>
