--- a/committees.html
+++ b/committees.html
@@ -80,6 +80,10 @@
   <td class="p_name">Fabian Barteld</td>
   <td class="p_affiliation">Universität Hamburg</td>
 </tr>
+	<tr>
+  <td class="p_name">Sabine Bartsch</td>
+  <td class="p_affiliation">Technische Universität Darmstadt</td>
+</tr>
 	 <tr>
   <td class="p_name">Noah Bubenhofer</td>
   <td class="p_affiliation">Zurich University</td>
