--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@
 	</p>
     
 	<h3>Registration</h3>
-
-	<h3>News</h3>
+	    <p>
+		    Please visit the <a href="http://gscl2017.dfki.de/registration.php">registration site of GSCL 2017</a>. 
+		    Participation in our workshop is included in the GSCL 2017 main conference fee.
+		    Fees for attending the workshop without the main conference are 35€ (early bird) or 50€ (regular). 
+		    </p>
     
-
       </div>
   
     </td>
