--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	    <p>
 		    Please visit the <a href="http://gscl2017.dfki.de/registration.php">registration site of GSCL 2017</a>. 
 		    Participation in our workshop is included in the GSCL 2017 main conference fee.
-		    Fees for attending the workshop without the main conference are 35€ (early bird) or 50€ (regular). 
+		    Fees for attending the workshop without the main conference are 35€ (early bird until 11 August 2017) or 50€ (regular). 
 		    </p>
     
       </div>
