--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	<h1>Teach4DH Workshop Description</h1>
       
-	      <h2>*** Extended deadline: Sunday, July 23rd ***</h2>
+	      <h2><ins>*** Extended deadline: Sunday, July 23rd ***</ins></h2>
 	      
 	<p>Computational linguists often teach digital humanities (DH) modules that focus on using / applying / adapting NLP technologies and resources to DH problems. The challenge in such modules is to introduce students with a background in humanities or social sciences to technical content without going into detail. NLP tools often require special input formats, knowledge of program options, and post-processing of the output. NLP resources are often not easily accessible and provide only limited interaction. Interfaces and search tools require knowledge of specialized search syntax.</p>
 
@@ -69,7 +69,7 @@
 		    <td><del>Jul&nbsp;17th,&nbsp;2017</del></td>
 	      <td>Paper submission due </td>
 	    </tr>
-		  <td>font color="red">Jul&nbsp;23th,&nbsp;2017</font></td>
+		  <td><font color="red">Jul&nbsp;23th,&nbsp;2017</font></td>
 		  <td><font color="red">Extended deadline </font></td>
 	    </tr>
 		  <tr valign="top">
