--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		    <td><del>Jul&nbsp;17th,&nbsp;2017</del></td>
 	      <td>Paper submission due </td>
 	    </tr>
-		  <td><font color="red">Jul&nbsp;23th,&nbsp;2017</font></td>
+		  <td><font color="red">Jul&nbsp;23rd,&nbsp;2017</font></td>
 		  <td><font color="red">Extended deadline </font></td>
 	    </tr>
 		  <tr valign="top">
