--- a/committees.html
+++ b/committees.html
@@ -149,6 +149,10 @@
   <td class="p_affiliation">University of Tübingen</td>
 </tr>
 	<tr>
+  <td class="p_name">Mihaela Vela</td>
+  <td class="p_affiliation">Universität des Saarlandes</td>
+</tr>
+	<tr>
   <td class="p_name">Gabriel Viehhauser</td>
   <td class="p_affiliation">University of Stuttgart</td>
 </tr>
