--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		  <td>Extended deadline </td>
 	    </tr>
 		  <tr valign="top">
-	      <td>Aug&nbsp;9th,&nbsp;2017</td>
+			  <td><del>Aug&nbsp;9th,&nbsp;2017</del></td>
 	      <td>Notification of acceptance </td>
 	    </tr>
 		  <tr valign="top">
