--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<p>
 	  <table cellspacing=0 cellpadding=3>
 	    <tr valign="top">
-	      <td>Apr&nbsp;25th,&nbsp;2017</td>
+		    <td><del>Apr&nbsp;25th,&nbsp;2017</del></td>
 	      <td>1st call for papers</td>
 	    </tr>
 	    <tr valign="top">
