--- a/program.html
+++ b/program.html
@@ -42,7 +42,117 @@
 
 	<h1>Teach4DH Program</h1>
       
-	<p>To be announced in August.</p>
+	<table cellspacing="0" cellpadding="5" border="0">
+
+<tr>
+  <td colspan="2"><h4>Tuesday, September 12, 2017</h4></td></tr>
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>9:30&#8211;9:45</b></td>
+  <td valign="top" style="padding-top: 14px;"><b><em>Opening: Welcome and introduction</em></b></td></tr>
+
+<tr>
+  <td valign="top">9:45&#8211;10:45</td>
+  <td valign="top"><em>Invited Talk: tba </a></em><br>Sabine Bartsch (TU Darmstadt)</td></tr>
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>10:45&#8211;11:15</b></td>
+  <td valign="top" style="padding-top: 14px;"><b><em>Coffee Break</em></b></td></tr>
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>11:15&#8211;12:45</b></td>
+  <td valign="top" style="padding-top: 14px;"><b>Session 1: Oral presentations</b></td></tr>
+
+<tr>
+  <td valign="top" width="125">11:15&#8211;11:45</td>
+  <td valign="top" align="left"><i>Lessons from a Massive Open Online Course (MOOC) on Natural Language Processing for Digital Humanities</i></a><br>
+Simon Clematide, Isabel Meraner, Noah Bubenhofer and Martin Volk</td>
+</tr>
+
+<tr>
+  <td valign="top" width="125">11:45&#8211;12:15</td>
+  <td valign="top" align="left"><i>Teaching Computational Aspects in the Digital Humanities Program at University of Gotham City – Intentions and Experiences</i></a><br>
+Gabriel Viehhauser, Sarah Schulz, Nils Reiter, Gerhard Kremer, Roman Klinger and Jonas Kuhn</td>
+</tr>
+
+<tr>
+  <td valign="top" width="125">12:15&#8211;12:45</td>
+  <td valign="top" align="left"><i>Hands-on: a five day text mining course for humanists and social scientists in R</i></a><br>
+Gregor Wiedemann and Andreas Niekler</td>
+</tr>
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>12:45&#8211;14:15</b></td>
+  <td valign="top" style="padding-top: 14px;"><b><em>Lunch</em></b></td></tr>
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>14:15&#8211;15:30</b></td>
+  <td valign="top" style="padding-top: 14px;"><b>Session 2: Posters and demos</b></td></tr>
+
+
+<tr>
+  <td valign="top" width="125">&nbsp;</td>
+  <td valign="top" align="left"><i>R-based strategies for DH in English Linguistics: a case study</i></a><br> Nicolas Ballier and Paula Lissón
+</td></tr>
+<tr>
+  <td valign="top" width="125">&nbsp;</td>
+  <td valign="top" align="left"><i>LEA - Linguistic Exercises with Annotation tools</i></a><br> Fabian Barteld and Johanna Flick
+</td></tr>
+<tr>
+  <td valign="top" width="125">&nbsp;</td>
+  <td valign="top" align="left"><i>Software projects for developing Digital Humanities resources</i></a><br> Thierry Declerck
+</td></tr>
+<tr>
+  <td valign="top" width="125">&nbsp;</td>
+  <td valign="top" align="left"><i>Pracice Report: A blended learning approach to teaching NLP for a DH public </i></a><br> Gertrud Faaß and Ulrich Heid
+</td></tr>
+<tr>
+  <td valign="top" width="125">&nbsp;</td>
+  <td valign="top" align="left"><i>Introducing humanities students to RegEx and XML technologies by means of the tool EXAKT from EXMARaLDA
+     </i></a><br> Anne Ferger
+</td></tr>
+<tr>
+  <td valign="top" width="125">&nbsp;</td>
+  <td valign="top" align="left"><i>Challenges in digital literacy in English curriculum    
+     </i></a><br> Charles Lam and Catherine Wong
+</td></tr>
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>15:30&#8211;16:00</b></td>
+  <td valign="top" style="padding-top: 14px;"><b><em>Coffee Break</em></b></td></tr>
+
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>16:00&#8211;17:00</b></td>
+  <td valign="top" style="padding-top: 14px;"><b>Session 3: Oral presentations</b></td></tr>
+
+<tr>
+  <td valign="top" width="125">16:00&#8211;16:30</td>
+  <td valign="top" align="left"><i>An intensive and quick course on Natural Language Processing applied to Literary Studies </i></a><br>
+Borja Navarro-Colorado</td></tr>
+
+<tr>
+  <td valign="top" width="125">16:30&#8211;17:00</td>
+  <td valign="top" align="left"><i>A Practical Course in Corpus Linguistics
+</i></a><br>
+Hannah Kermes and Mihaela Vela</td></tr>
+
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>17:00&#8211;18:00</b></td>
+  <td valign="top" style="padding-top: 14px;"><b>Panel: tba</b></td></tr>
+
+
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>18:00</b></td>
+  <td valign="top" style="padding-top: 14px;"><b><em>End</em></b></td></tr>
+
+<tr>
+  <td valign="top" style="padding-top: 14px;"><b>19:00</b></td>
+  <td valign="top" style="padding-top: 14px;"><b><em>Workshop dinner: tba</em></b></td></tr>
+
+</table>
 
       </div>
 
