--- a/program.html
+++ b/program.html
@@ -53,7 +53,7 @@
 
 <tr>
   <td valign="top">9:45&#8211;10:45</td>
-  <td valign="top"><em>Invited Talk: tba </a></em><br>Sabine Bartsch (TU Darmstadt)</td></tr>
+  <td valign="top"><em>Invited Talk</a></em><br>Sabine Bartsch (TU Darmstadt)</td></tr>
 
 <tr>
   <td valign="top" style="padding-top: 14px;"><b>10:45&#8211;11:15</b></td>
@@ -140,9 +140,12 @@ Hannah Kermes and Mihaela Vela</td></tr>
 
 <tr>
   <td valign="top" style="padding-top: 14px;"><b>17:00&#8211;18:00</b></td>
-  <td valign="top" style="padding-top: 14px;"><b>Panel: tba</b></td></tr>
+  <td valign="top" style="padding-top: 14px;"><b>Panel and wrap-up</b></td></tr>
 
-
+<tr>
+  <td valign="top" width="125">&nbsp;</td>
+  <td valign="top" align="left"><i>tba </i> 
+</td></tr>
 
 <tr>
   <td valign="top" style="padding-top: 14px;"><b>18:00</b></td>
@@ -150,7 +153,12 @@ Hannah Kermes and Mihaela Vela</td></tr>
 
 <tr>
   <td valign="top" style="padding-top: 14px;"><b>19:00</b></td>
-  <td valign="top" style="padding-top: 14px;"><b><em>Workshop dinner: tba</em></b></td></tr>
+  <td valign="top" style="padding-top: 14px;"><b><em>Workshop dinner</em></b></td></tr>
+
+<tr>
+  <td valign="top" width="125">&nbsp;</td>
+  <td valign="top" align="left"><i>Location: tba </i> 
+</td></tr>
 
 </table>
 
