--- a/program.html
+++ b/program.html
@@ -51,9 +51,14 @@
   <td valign="top" style="padding-top: 14px;"><b>9:30&#8211;9:45</b></td>
   <td valign="top" style="padding-top: 14px;"><b><em>Opening: Welcome and introduction</em></b></td></tr>
 
+		<tr>
+  <td valign="top" style="padding-top: 14px;"><b>9:45&#8211;10:45</b></td>
+  <td valign="top" style="padding-top: 14px;"><b>Invited Talk</b></td></tr>
+
+		
 <tr>
-  <td valign="top">9:45&#8211;10:45</td>
-  <td valign="top"><em>Invited Talk</a></em><br>Sabine Bartsch (TU Darmstadt)</td></tr>
+  <td valign="top">&nbsp;</td>
+  <td valign="top"><em>tba</a></em><br>Sabine Bartsch (TU Darmstadt)</td></tr>
 
 <tr>
   <td valign="top" style="padding-top: 14px;"><b>10:45&#8211;11:15</b></td>
