--- a/program.html
+++ b/program.html
@@ -43,6 +43,9 @@
 	<h1>Teach4DH Program</h1>
       
 	<table cellspacing="0" cellpadding="5" border="0">
+		<p>
+			Venue: Humboldt-Universität zu Berlin, Dorotheenstraße 24, Room 1.404 (4th floor)
+		</p>
 
 <tr>
   <td colspan="2"><h4>Tuesday, September 12, 2017</h4></td></tr>
