--- a/program.html
+++ b/program.html
@@ -43,12 +43,11 @@
 	<h1>Teach4DH Program</h1>
       
 	<table cellspacing="0" cellpadding="5" border="0">
-		<p>
-			Venue: Humboldt-Universität zu Berlin, Dorotheenstraße 24, Room 1.404 (4th floor)
-		</p>
+	
 
 <tr>
-  <td colspan="2"><h4>Tuesday, September 12, 2017</h4></td></tr>
+  <td colspan="2"><h4>Tuesday, September 12, 2017</h4>
+	  <br/> Venue: Humboldt-Universität zu Berlin, Dorotheenstraße 24, Room 1.404 (4th floor)</td></tr>
 
 <tr>
   <td valign="top" style="padding-top: 14px;"><b>9:30&#8211;9:45</b></td>
