--- a/program.html
+++ b/program.html
@@ -111,7 +111,7 @@ Gregor Wiedemann and Andreas Niekler</td>
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>Pracice Report: A blended learning approach to teaching NLP for a DH public </i></a><br> Gertrud Faaß and Ulrich Heid
+  <td valign="top" align="left"><i>Practice Report: A blended learning approach to teaching NLP for a DH public </i></a><br> Gertrud Faaß and Ulrich Heid
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
