--- a/program.html
+++ b/program.html
@@ -116,12 +116,12 @@ Gregor Wiedemann and Andreas Niekler</td>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
   <td valign="top" align="left"><i>Introducing humanities students to RegEx and XML technologies by means of the tool EXAKT from EXMARaLDA
-     </i></a><br> Anne Ferger
+     </i><br> Anne Ferger
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
   <td valign="top" align="left"><i>Challenges in digital literacy in English curriculum    
-     </i></a><br> Charles Lam and Catherine Wong
+     </i><br> Charles Lam and Catherine Wong
 </td></tr>
 
 <tr>
@@ -135,13 +135,13 @@ Gregor Wiedemann and Andreas Niekler</td>
 
 <tr>
   <td valign="top" width="125">16:00&#8211;16:30</td>
-  <td valign="top" align="left"><i>An intensive and quick course on Natural Language Processing applied to Literary Studies </i></a><br>
+  <td valign="top" align="left"><i>An intensive and quick course on Natural Language Processing applied to Literary Studies </i><br>
 Borja Navarro-Colorado</td></tr>
 
 <tr>
   <td valign="top" width="125">16:30&#8211;17:00</td>
   <td valign="top" align="left"><i>A Practical Course in Corpus Linguistics
-</i></a><br>
+</i><br>
 Hannah Kermes and Mihaela Vela</td></tr>
 
 
@@ -151,7 +151,8 @@ Hannah Kermes and Mihaela Vela</td></tr>
 
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>tba </i> 
+  <td valign="top" align="left"><i>Curricular considerations in developing standards for DH programs</i><br>
+	  Sabine Bartsch (TU Darmstadt), Peggy Bockwinkel (Universität Stuttgart), Andreas Witt (Universität zu Koln) 
 </td></tr>
 
 <tr>
