--- a/program.html
+++ b/program.html
@@ -60,7 +60,7 @@
 		
 <tr>
   <td valign="top">&nbsp;</td>
-  <td valign="top"><em>tba</a></em><br>Sabine Bartsch (TU Darmstadt)</td></tr>
+  <td valign="top"><em>The digital footprint in humanities teaching and research</em><br>Sabine Bartsch (TU Darmstadt)</td></tr>
 
 <tr>
   <td valign="top" style="padding-top: 14px;"><b>10:45&#8211;11:15</b></td>
