--- a/program.html
+++ b/program.html
@@ -165,7 +165,7 @@ Hannah Kermes and Mihaela Vela</td></tr>
 
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>Location: tba </i> 
+  <td valign="top" align="left"><i>Location: <a href="http://www.cafe-vianova.de/nova2" target="_blank">Via Nova II</a>, Universitätsstraße 2, Berlin  </i> 
 </td></tr>
 
 </table>
