--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	      <td>Notification of acceptance </td>
 	    </tr>
 		  <tr valign="top">
-	      <td>Aug&nbsp;25th,&nbsp;2017</td>
+			  <td><del>Aug&nbsp;25th,&nbsp;2017</del></td>
 	      <td>Camera-ready papers due </td>
 	    </tr>
 	    <tr valign="top">
