--- a/program.html
+++ b/program.html
@@ -147,7 +147,7 @@ Hannah Kermes and Mihaela Vela</td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
   <td valign="top" align="left"><i>Curricular considerations in developing standards for DH programs</i><br>
-	  Sabine Bartsch (TU Darmstadt), Peggy Bockwinkel (Universität Stuttgart), Andreas Witt (Universität zu Koln) 
+	  Sabine Bartsch (TU Darmstadt), Peggy Bockwinkel (Universität Stuttgart), Andreas Witt (Universität zu Köln) 
 </td></tr>
 
 <tr>
