--- a/program.html
+++ b/program.html
@@ -79,7 +79,7 @@ Simon Clematide, Isabel Meraner, Noah Bubenhofer and Martin Volk</td>
 <tr>
   <td valign="top" width="125">11:45&#8211;12:15</td>
   <td valign="top" align="left"><i>Teaching Computational Aspects in the Digital Humanities Program at University of Stuttgart – Intentions and Experiences</i></a><br>
-Gabriel Viehhauser, Sarah Schulz, Nils Reiter, Gerhard Kremer, Roman Klinger and Jonas Kuhn</td>
+	  Nils Reiter, Sarah Schulz, Gerhard Kremer, Roman Klinger, Gabriel Viehhauser and Jonas Kuhn </td>
 </tr>
 
 <tr>
