--- a/index.html
+++ b/index.html
@@ -90,12 +90,17 @@
 	  </table>
 	</p>
     
-	<h3>Registration</h3>
+	<!--<h3>Registration</h3>
 	    <p>
 		    Please visit the <a href="http://gscl2017.dfki.de/registration.php">registration site of GSCL 2017</a>. 
 		    Participation in our workshop is included in the GSCL 2017 main conference fee.
 		    Fees for attending the workshop without the main conference are 35€ (early bird until Aug 11 2017) or 50€ (regular). 
-		    </p>
+		    </p> -->
+	
+	<h3>Proceedings</h3>
+	<p>
+	The proceedings are published as a CEUR Workshop volume. Please visit: <a href="http://ceur-ws.org/Vol-1918" target="_blank">http://ceur-ws.org/Vol-1918</a>.
+	</p>
     
       </div>
   
