--- a/program.html
+++ b/program.html
@@ -41,6 +41,11 @@
       <div id="contents">
 
 	<h1>Teach4DH Program</h1>
+	      
+	      <h3>Proceedings</h3>
+	<p>
+	The proceedings are published as a CEUR Workshop volume. Please visit: <a href="http://ceur-ws.org/Vol-1918" target="_blank">http://ceur-ws.org/Vol-1918</a>.
+	</p>
       
 	<table cellspacing="0" cellpadding="5" border="0">
 	
