--- a/submission.html
+++ b/submission.html
@@ -25,6 +25,7 @@
 <div id="subheader">
   <ul id="navigation">
     <li><a href="index.html">Home</a></li>
+	  	  <li><a href="http://ceur-ws.org/Vol-1918" target="_blank">Proceedings</a></li>
     <li><a href="cfp.html">Call for Papers</a></li>
     <li class="active"><a href="submission.html">Submission</a></li>
     <li><a href="program.html">Program</a></li>
