--- a/program.html
+++ b/program.html
@@ -78,19 +78,19 @@
 
 <tr>
   <td valign="top" width="125">11:15&#8211;11:45</td>
-  <td valign="top" align="left"><i>Lessons from a Massive Open Online Course (MOOC) on Natural Language Processing for Digital Humanities</i></a><br>
+  <td valign="top" align="left"><i>Lessons from a Massive Open Online Course (MOOC) on Natural Language Processing for Digital Humanities</i><a href="http://ceur-ws.org/Vol-1918/clematide.pdf" target="_blank">[pdf]</a> [slides]<br>
 Simon Clematide, Isabel Meraner, Noah Bubenhofer and Martin Volk</td>
 </tr>
 
 <tr>
   <td valign="top" width="125">11:45&#8211;12:15</td>
-  <td valign="top" align="left"><i>Teaching Computational Aspects in the Digital Humanities Program at University of Stuttgart – Intentions and Experiences</i></a><br>
+  <td valign="top" align="left"><i>Teaching Computational Aspects in the Digital Humanities Program at University of Stuttgart – Intentions and Experiences</i><a href="http://ceur-ws.org/Vol-1918/reiter.pdf" target="_blank">[pdf]</a> [slides]<br>
 	  Nils Reiter, Sarah Schulz, Gerhard Kremer, Roman Klinger, Gabriel Viehhauser and Jonas Kuhn </td>
 </tr>
 
 <tr>
   <td valign="top" width="125">12:15&#8211;12:45</td>
-  <td valign="top" align="left"><i>Hands-on: a five day text mining course for humanists and social scientists in R</i></a><br>
+  <td valign="top" align="left"><i>Hands-on: a five day text mining course for humanists and social scientists in R</i><a href="http://ceur-ws.org/Vol-1918/wiedemann.pdf" target="_blank">[pdf]</a> [slides]<br>
 Gregor Wiedemann and Andreas Niekler</td>
 </tr>
 
@@ -105,24 +105,25 @@ Gregor Wiedemann and Andreas Niekler</td>
 
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>R-based strategies for DH in English Linguistics: a case study</i></a><br> Nicolas Ballier and Paula Lissón
+  <td valign="top" align="left"><i>R-based strategies for DH in English Linguistics: a case study</i><a href="http://ceur-ws.org/Vol-1918/ballier.pdf" target="_blank">[pdf]</a> [slides]
+	  <br> Nicolas Ballier and Paula Lissón
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>LEA - Linguistic Exercises with Annotation tools</i></a><br> Fabian Barteld and Johanna Flick
+  <td valign="top" align="left"><i>LEA - Linguistic Exercises with Annotation tools</i><a href="http://ceur-ws.org/Vol-1918/barteld.pdf" target="_blank">[pdf]</a> [slides]<br> Fabian Barteld and Johanna Flick
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>Software projects for developing Digital Humanities resources</i></a><br> Thierry Declerck
+  <td valign="top" align="left"><i>Software projects for developing Digital Humanities resources</i><a href="http://ceur-ws.org/Vol-1918/declerck.pdf" target="_blank">[pdf]</a> [slides]<br> Thierry Declerck
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>Practice Report: A blended learning approach to teaching NLP for a DH public </i></a><br> Gertrud Faaß and Ulrich Heid
+  <td valign="top" align="left"><i>Practice Report: A blended learning approach to teaching NLP for a DH public </i><a href="http://ceur-ws.org/Vol-1918/faass.pdf" target="_blank">[pdf]</a> [slides]<br> Gertrud Faaß and Ulrich Heid
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>Challenges in digital literacy in English curriculum    
-     </i><br> Charles Lam and Catherine Wong
+  <td valign="top" align="left"><i>Challenges in digital literacy in English curriculum</i> 
+	  <a href="http://ceur-ws.org/Vol-1918/lam.pdf" target="_blank">[pdf]</a> [slides]<br> Charles Lam and Catherine Wong
 </td></tr>
 
 <tr>
@@ -136,13 +137,13 @@ Gregor Wiedemann and Andreas Niekler</td>
 
 <tr>
   <td valign="top" width="125">16:00&#8211;16:30</td>
-  <td valign="top" align="left"><i>An intensive and quick course on Natural Language Processing applied to Literary Studies </i><br>
+  <td valign="top" align="left"><i>An intensive and quick course on Natural Language Processing applied to Literary Studies </i><a href="http://ceur-ws.org/Vol-1918/navarro.pdf" target="_blank">[pdf]</a> [slides]<br>
 Borja Navarro-Colorado</td></tr>
 
 <tr>
   <td valign="top" width="125">16:30&#8211;17:00</td>
   <td valign="top" align="left"><i>A Practical Course in Corpus Linguistics
-</i><br>
+	  </i> <a href="http://ceur-ws.org/Vol-1918/vela.pdf" target="_blank">[pdf]</a> <a href="slides/hermes_vela_slides_Teach4DH.pdf" target="_blank">[slides]</a> <br>
 Hannah Kermes and Mihaela Vela</td></tr>
 
 
