--- a/program.html
+++ b/program.html
@@ -46,7 +46,7 @@
 	      <h3>Proceedings</h3>
 	<p>
 	The proceedings are published as a CEUR Workshop volume. Please visit: <a href="http://ceur-ws.org/Vol-1918" target="_blank">http://ceur-ws.org/Vol-1918</a>.
-	</p>
+	The individual papers (and presentation slides/posters if available) are linked below. </p>
       
 	<table cellspacing="0" cellpadding="5" border="0">
 	
