--- a/program.html
+++ b/program.html
@@ -105,25 +105,28 @@ Gregor Wiedemann and Andreas Niekler</td>
 
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>R-based strategies for DH in English Linguistics: a case study</i><a href="http://ceur-ws.org/Vol-1918/ballier.pdf" target="_blank">[pdf]</a> [slides]
+  <td valign="top" align="left"><i>R-based strategies for DH in English Linguistics: a case study</i><a href="http://ceur-ws.org/Vol-1918/ballier.pdf" target="_blank">[pdf]</a> [poster]
 	  <br> Nicolas Ballier and Paula Lissón
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>LEA - Linguistic Exercises with Annotation tools</i><a href="http://ceur-ws.org/Vol-1918/barteld.pdf" target="_blank">[pdf]</a> [slides]<br> Fabian Barteld and Johanna Flick
+  <td valign="top" align="left"><i>LEA - Linguistic Exercises with Annotation tools</i><a href="http://ceur-ws.org/Vol-1918/barteld.pdf" target="_blank">[pdf]</a> [poster]<br> 
+	  Fabian Barteld and Johanna Flick
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>Software projects for developing Digital Humanities resources</i><a href="http://ceur-ws.org/Vol-1918/declerck.pdf" target="_blank">[pdf]</a> [slides]<br> Thierry Declerck
+  <td valign="top" align="left"><i>Software projects for developing Digital Humanities resources</i><a href="http://ceur-ws.org/Vol-1918/declerck.pdf" target="_blank">[pdf]</a> [poster]<br> 
+	  Thierry Declerck
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>Practice Report: A blended learning approach to teaching NLP for a DH public </i><a href="http://ceur-ws.org/Vol-1918/faass.pdf" target="_blank">[pdf]</a> [slides]<br> Gertrud Faaß and Ulrich Heid
+  <td valign="top" align="left"><i>Practice Report: A blended learning approach to teaching NLP for a DH public </i><a href="http://ceur-ws.org/Vol-1918/faass.pdf" target="_blank">[pdf]</a> [poster]<br> 
+	  Gertrud Faaß and Ulrich Heid
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
   <td valign="top" align="left"><i>Challenges in digital literacy in English curriculum</i> 
-	  <a href="http://ceur-ws.org/Vol-1918/lam.pdf" target="_blank">[pdf]</a> [slides]<br> Charles Lam and Catherine Wong
+	  <a href="http://ceur-ws.org/Vol-1918/lam.pdf" target="_blank">[pdf]</a> [poster]<br> Charles Lam and Catherine Wong
 </td></tr>
 
 <tr>
@@ -143,7 +146,7 @@ Borja Navarro-Colorado</td></tr>
 <tr>
   <td valign="top" width="125">16:30&#8211;17:00</td>
   <td valign="top" align="left"><i>A Practical Course in Corpus Linguistics
-	  </i> <a href="http://ceur-ws.org/Vol-1918/vela.pdf" target="_blank">[pdf]</a> <a href="slides/hermes_vela_slides_Teach4DH.pdf" target="_blank">[slides]</a> <br>
+	  </i> <a href="http://ceur-ws.org/Vol-1918/vela.pdf" target="_blank">[pdf]</a> <a href="slides/kermes_vela_slides_Teach4DH.pdf" target="_blank">[slides]</a> <br>
 Hannah Kermes and Mihaela Vela</td></tr>
 
 
