--- a/program.html
+++ b/program.html
@@ -105,7 +105,7 @@ Gregor Wiedemann and Andreas Niekler</td>
 
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>R-based strategies for DH in English Linguistics: a case study</i> <a href="http://ceur-ws.org/Vol-1918/ballier.pdf" target="_blank">[pdf]</a> [poster]
+  <td valign="top" align="left"><i>R-based strategies for DH in English Linguistics: a case study</i> <a href="http://ceur-ws.org/Vol-1918/ballier.pdf" target="_blank">[pdf]</a> <a href="slides/ballier_poster_Teach4DH.pdf" target="_blank">[poster]</a>
 	  <br> Nicolas Ballier and Paula Lissón
 </td></tr>
 <tr>
