--- a/program.html
+++ b/program.html
@@ -78,7 +78,7 @@
 
 <tr>
   <td valign="top" width="125">11:15&#8211;11:45</td>
-  <td valign="top" align="left"><i>Lessons from a Massive Open Online Course (MOOC) on Natural Language Processing for Digital Humanities</i> <a href="http://ceur-ws.org/Vol-1918/clematide.pdf" target="_blank">[pdf]</a> [slides]<br>
+  <td valign="top" align="left"><i>Lessons from a Massive Open Online Course (MOOC) on Natural Language Processing for Digital Humanities</i> <a href="http://ceur-ws.org/Vol-1918/clematide.pdf" target="_blank">[pdf]</a> <a href="slides/clematide_slides_Teach4DH.pdf" target="_blank">[slides]</a><br>
 Simon Clematide, Isabel Meraner, Noah Bubenhofer and Martin Volk</td>
 </tr>
 
@@ -120,7 +120,7 @@ Gregor Wiedemann and Andreas Niekler</td>
 </td></tr>
 <tr>
   <td valign="top" width="125">&nbsp;</td>
-  <td valign="top" align="left"><i>Practice Report: A blended learning approach to teaching NLP for a DH public </i> <a href="http://ceur-ws.org/Vol-1918/faass.pdf" target="_blank">[pdf]</a> [poster]<br> 
+  <td valign="top" align="left"><i>Practice Report: A blended learning approach to teaching NLP for a DH public </i> <a href="http://ceur-ws.org/Vol-1918/faass.pdf" target="_blank">[pdf]</a> <a href="slides/faass_poster_Teach4DH.pdf" target="_blank">[poster]</a><br> 
 	  Gertrud Faaß and Ulrich Heid
 </td></tr>
 <tr>
